<resources>
    <string name="app_name">Test</string>
    <string name="test_string">Test String</string>
    <string name="test_drawable">Test Drawable</string>
    <string name="test_scheduler">Test Scheduler</string>
    <string name="test_transform">Test Transform</string>
    <string name="test_img_1_desc">Test Image 1</string>
    <string name="test_img_2_desc">Test Image 2</string>
    <string name="test_radio_btn">Test Radio Button</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both">Both</string>
    <string name="test_spannable_string">Test Span</string>
    <string name="test_custom_view">Test custom view</string>
    <string name="test_date_picker">Test date picker</string>
    <string name="test_gallery">Test gallery</string>
    <string name="test_bottom_sheet">Test bottom sheet</string>
    <string name="USER_PROFILE_SUMMARY">%1$s, %2$d</string>
    <string name="test_fresco">test fresco</string>
    <string name="test_anim_lottie">test anim lottie</string>
    <string name="test_anim_bone">test anim bone</string>
    <string name="test_actionbar">Test action bar</string>
    <string name="test_radar">test radar</string>
</resources>
